--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,60 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+li {
+  list-style: none;
+}
+
+a,
+img,
+data,
+span,
+input,
+button,
+select,
+ion-icon,
+textarea {
+  display: block;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+}
+
+img {
+  height: auto;
+}
+
+input,
+bu tton,
+select,
+textarea {
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  outline: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 body {
@@ -63,7 +111,7 @@ body.navActive {
   animation: rotate360 1s linear infinite;
 }
 .preload__text {
-  background-image: linear-gradient(90deg, transparent 0% 16.66%, var(rgb(18, 17, 17)) 33.33% 50%, transparent 66.66% 75%);
+  background: linear-gradient(90deg, transparent 0% 16.66%, var(rgb(18, 17, 17)) 33.33% 50%, transparent 66.66% 75%);
   background-size: 500%;
   font-size: calc(2rem + 3vw);
   font-weight: 700;
@@ -106,6 +154,191 @@ body.navActive {
   100% {
     background-position: 0%;
   }
+}
+.nav__list--link--icon {
+  content: "";
+  width: 8px;
+  height: 8px;
+  border: 1px solid rgb(228, 197, 144);
+  transform: rotate(45deg);
+}
+
+.hover__underline::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  border-block: 1px solid rgb(228, 197, 144);
+  transform: scaleX(0.2);
+  transition: 500ms ease;
+}
+
+.hover__underline:is(:hover, :focus-visible)::after {
+  transform: scaleX(1);
+  opacity: 1;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  padding-block: 40px;
+  z-index: 2;
+  border-block-end: 1px solid transparent;
+  transition: 250ms ease;
+}
+.header__container {
+  padding-inline: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+}
+
+.header.active {
+  padding-block: 20px;
+  background-color: rgb(33, 33, 33);
+  border-color: rgba(0, 0, 0, 0.15);
+}
+
+.header.hide {
+  transform: translateY(-100%);
+  transition-delay: 250ms;
+}
+
+.nav__openButton {
+  padding: 12px;
+  padding-inline-end: 0;
+}
+
+.nav__openButton .line {
+  width: 30px;
+  height: 2px;
+  background-color: rgb(255, 255, 255);
+  margin-block: 4px;
+  transform-origin: left;
+  animation: menuBtn 400ms ease-in-out alternate infinite;
+  color: rgb(255, 255, 255);
+}
+
+@keyframes menuBtn {
+  0% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scaleX(0.5);
+  }
+}
+.nav__openButton .line-2 {
+  animation-delay: 150ms;
+}
+
+.nav__openButton .line-3 {
+  animation-delay: 300ms;
+}
+
+.nav {
+  position: fixed;
+  background-color: rgb(14, 13, 11);
+  top: 0;
+  left: -360px;
+  bottom: 0;
+  max-width: 360px;
+  width: 100%;
+  padding-inline: 30px;
+  padding-block-end: 50px;
+  overflow-y: auto;
+  visibility: hidden;
+  z-index: 1;
+  transition: 500ms ease;
+}
+.nav__list {
+  border-block-end: 1px solid rgba(255, 255, 255, 0.2);
+  margin-block-end: 100px;
+}
+.nav__list--item {
+  border-block-start: 1px solid rgba(255, 255, 255, 0.2);
+}
+.nav__list--link {
+  position: relative;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  padding-block: 10px;
+  max-width: unset;
+}
+.nav__list--link::after {
+  display: none;
+}
+.nav__list--link--text {
+  transition: 250ms ease;
+}
+
+.nav.active {
+  visibility: visible;
+  transform: translateX(360px);
+}
+
+.nav .closeButton {
+  color: rgb(255, 255, 255);
+  border: 1px solid currentColor;
+  padding: 4px;
+  border-radius: 50%;
+  margin-inline-start: auto;
+  margin-block: 30px 20px;
+}
+
+.nav .closeButton ion-icon {
+  --ionicon-stroke-width: 40px;
+}
+
+.nav .closeButton:is(:hover, :focus-visible) {
+  color: rgb(228, 197, 144);
+}
+
+.nav .logo {
+  max-width: max-content;
+  margin-inline: auto;
+  margin-block-end: 60px;
+}
+
+.nav__list--link:is(:hover, :focus-visible, .active) .nav__list--link--text {
+  color: rgb(228, 197, 144);
+  transform: translateX(20px);
+}
+
+.nav__list--link .nav__list--link--icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%) rotate(45deg);
+  opacity: 0;
+  transition: 250ms ease;
+}
+
+.nav__list--link:is(:hover, :focus-visible, .active) .nav__list--link--icon {
+  opacity: 1;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  pointer-events: none;
+  transition: 500ms ease;
+  z-index: 0;
+}
+
+.overlay.active {
+  opacity: 1;
+  pointer-events: all;
 }
 
 /*# sourceMappingURL=style.css.map */
