--- a/scss/_globalSetting.scss
+++ b/scss/_globalSetting.scss
@@ -2,10 +2,57 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
 }
 
 html{
   scroll-behavior: smooth;
+}
+
+li{list-style: none;}
+
+a,
+img,
+data,
+span,
+input,
+button,
+select,
+ion-icon,
+textarea{ 
+  display: block;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+button{
+  border: none;
+  background-color: transparent;
+}
+
+img{
+  height: auto;
+}
+
+input,
+bu
+tton,
+select,
+textarea{ 
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+input,
+select,
+textarea{
+  width: 100%;
+  outline: none;
+}
+
+button{
+  cursor: pointer;
 }
