--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,10 @@ body.navActive {
   opacity: 1;
 }
 
+.btn {
+  display: none;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -339,6 +343,169 @@ body.navActive {
 .overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+.text_center {
+  text-align: center;
+}
+
+.slider-bg-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero__slider--item--subtitle {
+  position: relative;
+  color: rgb(228, 197, 144);
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  margin-block-end: 12px;
+}
+.hero__slider--item--subtitle::after {
+  content: url(../images/separator.svg);
+  display: block;
+  width: 100px;
+  margin-inline: auto;
+  margin-block-start: 5px;
+}
+
+.hero__btn {
+  position: relative;
+  color: rgb(228, 197, 144);
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  max-width: max-content;
+  border: 2px solid rgb(228, 197, 144);
+  padding: 12px 45px;
+  overflow: hidden;
+  z-index: 1;
+}
+.hero__btn::before {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200%;
+  height: 200%;
+  border-radius: 50%;
+  background-color: rgb(228, 197, 144);
+  transition: 500ms ease;
+  z-index: -1;
+}
+
+.hero__btn .text {
+  transition: 250ms ease;
+}
+
+.hero__btn .text-2 {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: max-content;
+  color: rgb(14, 13, 11);
+}
+
+.hero__btn:is(:hover, :focus-visible)::before {
+  bottom: -50%;
+}
+
+.hero__btn:is(:hover, :focus-visible) .text-1 {
+  transform: translateY(-40px);
+}
+
+.hero__btn:is(:hover, :focus-visible) .text-2 {
+  transform: translate(-50%, -50%);
+  top: 50%;
+}
+
+.btn__secondary::before {
+  background-color: rgb(14, 13, 11);
+}
+
+.btn__secondary .text-2 {
+  color: rgb(255, 255, 255);
+}
+
+.hero .hero__slider--btn--prev {
+  display: none;
+}
+
+.hero {
+  position: relative;
+  padding-block: 120px;
+  min-height: 100vh;
+  overflow: hidden;
+  z-index: 1;
+}
+.hero__slider--item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  padding-block-start: 100px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 1000ms ease;
+  z-index: 1;
+}
+.hero__slider--item.active {
+  opacity: 1;
+  visibility: visible;
+}
+.hero__slider--item--subtitle::after {
+  margin-block: 14px 20px;
+}
+.hero__slider--item--text {
+  margin-block: 10px 40px;
+}
+.hero__btn {
+  margin-inline: auto;
+}
+.hero__slider--btn {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  z-index: 2;
+  background-color: rgb(228, 197, 144);
+  width: 110px;
+  height: 110px;
+  padding: 12px;
+  transform: scale(0.6);
+}
+
+.hero .slider-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.15);
+  pointer-events: none;
+  user-select: none;
+  z-index: -1;
+}
+
+.slider-bg {
+  animation: smoothScale 7s linear forwards;
+}
+
+@keyframes smoothScale {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.15);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
