--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,3 +18,7 @@ $black-alpha-15: rgba(0, 0, 0, 0.15);
 // GRADIENTS
 $loading-text-gradient: linear-gradient(90deg, transparent 0% 16.66%, var($smoky-black-3) 33.33% 50%,  transparent 66.66% 75%);
 $gradient-1: linear-gradient(to top,rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.7),transparent);
+
+// FONT
+
+$oldStan: 'Old Standard TT', serif;
