--- a/scss/_h.scss
+++ b/scss/_h.scss
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: $eerie-black-1;
   color: $white;
   font-family: 'DM Sans', sans-serif;
@@ -8,14 +8,27 @@ body{
   overflow: hidden;
 }
 
-body.loaded {overflow: overlay;}
-body.navActive { overflow: hidden;}
+body.loaded {
+  overflow: overlay;
+}
 
-::-webkit-scrollbar{ width: 5px;}
-::-webkit-scrollbar-track{ background-color: transparent;}
-::-webkit-scrollbar-thumb{ background-color: $gold-crayola;}
+body.navActive {
+  overflow: hidden;
+}
 
-.preload{
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $gold-crayola;
+}
+
+.preload {
   position: fixed;
   top: 0;
   left: 0;
@@ -28,7 +41,7 @@ body.navActive { overflow: hidden;}
   justify-items: center;
   transition: 500ms ease;
 
-  &__circle{
+  &__circle {
     width: 112px;
     height: 112px;
     border-radius: 50%;
@@ -38,12 +51,12 @@ body.navActive { overflow: hidden;}
     animation: rotate360 1s linear infinite;
   }
 
-  &__text{
-    background: $loading-text-gradient;
-    background-size: 500%;
+  &__text {
     font-size: calc(2rem + 3vw);
     font-weight: 700;
     line-height: 1em;
+    background-size: 500%;
+    background: linear-gradient(90deg, transparent 0% 16.66%, var(--smoky-black-3) 33.33% 50%, transparent 66.66% 75%);
     text-transform: uppercase;
     letter-spacing: 16px;
     padding-inline-start: 16px;
@@ -55,9 +68,15 @@ body.navActive { overflow: hidden;}
   }
 }
 
-.preload > * {transition: 250ms ease;}
-.preload.loaded > * {opacity: 0;}
-.preload.loaded{
+.preload>* {
+  transition: 250ms ease;
+}
+
+.preload.loaded>* {
+  opacity: 0;
+}
+
+.preload.loaded {
   transition-delay: 250ms;
   transform: translateY(100%);
 }
@@ -66,11 +85,18 @@ body.navActive { overflow: hidden;}
   0% {
     transform: rotate(0);
   }
-  100%{
+
+  100% {
     transform: rotate(1turn);
   }
 }
+
 @keyframes loadingText {
-  0%{ background-position: 100%;}
-  100%{ background-position: 0%;}
+  0% {
+    background-position: 100%;
+  }
+
+  100% {
+    background-position: 0%;
+  }
 }
