--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,3 +22,4 @@ $gradient-1: linear-gradient(to top,rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.7),transp
 // FONT
 
 $oldStan: 'Old Standard TT', serif;
+$zeyada: 'Zeyada', cursive;
