--- a/css/style.css
+++ b/css/style.css
@@ -491,15 +491,10 @@ body.navActive {
   right: 15px;
   z-index: 2;
   background-color: rgb(228, 197, 144);
-  width: 210px;
+  width: 160px;
   height: 130px;
   padding: 12px;
   transform: scale(0.6);
-}
-.hero__slider--btn::after {
-  inset: 0;
-  border: 1px solid rgb(14, 13, 11);
-  animation: rotate360 15seg linear infinite;
 }
 .hero__slider--btn--img {
   margin-inline: auto;
@@ -509,8 +504,14 @@ body.navActive {
   color: rgb(14, 13, 11);
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.1px;
   line-height: 1em;
+}
+
+.hero__slider--btn::after {
+  inset: 0;
+  border: 1px solid rgb(228, 197, 144);
+  animation: rotate360 15seg linear infinite;
 }
 
 .hero .slider-bg {
@@ -601,6 +602,48 @@ body.navActive {
   width: 100px;
   margin-inline: auto;
   margin-block-start: 5px;
+}
+
+.service__container--text {
+  margin: 10px 0;
+  padding: 15px;
+}
+
+.service__container--list--card {
+  overflow: hidden;
+  margin: 20px 0 30px;
+}
+.service__container--list--card .has-before {
+  padding-block: 30px;
+  margin-block-end: 26px;
+  z-index: 1;
+}
+.service__container--list--card .has-before::before {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 140px;
+  height: 100%;
+  background-image: url(../images/img-pattern.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat;
+  transition: 500ms ease;
+  transition-delay: 0;
+  z-index: -1;
+  will-change: transform;
+}
+.service__container--list--card .card__banner {
+  transition: 500ms ease;
+}
+
+.service__container--list--card:is(:hover, :focus-visible) .has-before::before {
+  transform: rotateY(0.5turn) translateX(50%);
+  transition-delay: 350ms;
+}
+
+.service__container--list--card:is(:hover, :focus-visible) .card__banner {
+  transform: scale(1.05);
 }
 
 .service__container--title {
