--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,7 @@ body.navActive {
   padding: 12px 45px;
   overflow: hidden;
   z-index: 1;
+  margin-block-start: 26px;
 }
 .hero__btn::before {
   content: "";
@@ -714,6 +715,86 @@ body.navActive {
   text-transform: uppercase;
   margin: 15px;
   letter-spacing: 0.1px;
+}
+
+.about__container {
+  display: grid;
+  gap: 60px;
+}
+.about__container--title {
+  font-family: "Zeyada", cursive;
+  text-transform: uppercase;
+  letter-spacing: 0.1px;
+  line-height: 35px;
+  font-weight: 400;
+  padding-top: 15px;
+}
+.about__container--subtitle {
+  position: relative;
+  color: rgb(228, 197, 144);
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  margin-block-end: 12px;
+}
+.about__container--subtitle::after {
+  content: url(../images/separator.svg);
+  display: block;
+  width: 100px;
+  margin-inline: auto;
+  margin-block-start: 5px;
+}
+.about__container--text {
+  margin: 10px 0;
+  padding: 15px;
+  font-weight: 400;
+}
+.about__container--banner {
+  position: relative;
+  margin-block-end: 120px;
+}
+.about__container--banner > .w-100 {
+  padding-inline-start: 50px;
+}
+.about__container--img {
+  position: absolute;
+}
+.about__container--img ::before {
+  z-index: -1;
+}
+.about .abs-img-1 {
+  bottom: 80px;
+  left: 0;
+  width: 230px;
+  padding-block: 70px;
+  padding-left: 10px;
+}
+.about .abs-img-1::before {
+  top: 35px;
+  bottom: 0;
+  left: 60%;
+  transform: translateX(-50%);
+  width: 140px;
+  height: 300px;
+  background-image: url(../images/img-pattern.svg);
+  background-repeat: repeat;
+  z-index: -2;
+}
+.about .abs-img-2 {
+  top: -40px;
+  right: 10px;
+  overflow: hidden;
+}
+.about .abs-img-2::before {
+  inset: 0;
+  background-image: url(../images/badge-2-bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  animation: rotate360 15s linear infinite;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
