--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,7 @@ body.navActive {
 
 .about__container {
   display: grid;
-  gap: 60px;
+  gap: 30px;
 }
 .about__container--title {
   font-family: "Zeyada", cursive;
@@ -795,6 +795,37 @@ body.navActive {
 
 .w-100 {
   width: 100%;
+}
+
+.contact__number {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0;
+  width: 100%;
+  color: rgb(228, 197, 144);
+  max-width: max-content;
+  margin-inline: auto;
+  justify-content: center;
+}
+.contact__number ion-icon {
+  padding-right: 5px;
+  position: relative;
+  top: 3px;
+}
+.contact__number ion-icon:hover {
+  animation: shake 500ms linear infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
